--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,96 @@
 }
 body {
   font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+
+  /* !rimuovere */
+  background-color: brown;
+}
+img {
+  max-width: 100%;
+}
+
+/* utilities */
+.w-25 {
+  width: 25%;
+}
+.w-50 {
+  width: 50%;
+}
+.w-75 {
+  width: 75%;
+}
+
+.clearfix {
+  clear: both;
+  content: "";
+  display: table;
+}
+.f-left {
+  float: left;
+}
+.f-right {
+  float: right;
+}
+
+.container-90 {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.container-70 {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.btn {
+  color: white;
+  background-color: #0061ff;
+  text-decoration: none;
+  padding: 10px 30px;
+}
+/* Header */
+/* *nav */
+#nav {
+  width: 100%;
+  height: 80px;
+  line-height: 80px;
+  background-color: white;
+  position: fixed;
+}
+#nav-left,
+#nav-right {
+  width: calc(50% - 30px);
+  margin: 0 15px;
+}
+#logo {
+  vertical-align: middle;
+}
+#nav ul,
+li {
+  display: inline-block;
+}
+#nav li a {
+  color: black;
+  text-decoration: none;
+  margin: 0 20px;
+}
+/* *nav parte destra */
+#nav-right {
+  text-align: right;
+}
+#nav-right > a {
+  margin: 0 25px;
+}
+
+/* *jumbotron */
+#jumbotron {
+  background-color: #b4d0e7;
+  padding-top: 80px;
+}
+/* *jumbo tile */
+#jumbo-title h1 {
+  font-size: 75px;
+  font-weight: 800;
+  margin-top: 100px;
 }
