--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,6 @@
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
-
-  /* !rimuovere */
-  background-color: brown;
 }
 img {
   max-width: 100%;
@@ -146,8 +143,8 @@ main {
 
 /* *Prices */
 #prices {
-  /* !rimuovere */
-  background-color: yellowgreen;
+  /* todo rimuovere */
+  /* background-color: rgba(157, 187, 98, 0.5); */
 }
 #prices > h2 {
   font-size: 50px;
@@ -183,13 +180,14 @@ main {
   width: calc(100% / 3 - 40px);
   border: 1px solid grey;
   height: 1100px;
-  /* !rimuovere */
-  background-color: cadetblue;
+  /* todo rimuovere */
+  /* background-color: rgba(127, 174, 175, 0.5); */
 }
 #prices-table .table.second {
   margin: 0 60px;
 }
-#prices-table .n-customer {
+/* !anche per uffico vendite */
+.n-customer {
   text-align: center;
   line-height: 2.5rem;
   border-bottom: 1px solid grey;
@@ -203,6 +201,7 @@ main {
   margin: 15px 0;
 }
 .price-info-box .price-time {
+  font-size: 0.9rem;
   color: gray;
 }
 .price-info-box ul {
@@ -230,4 +229,10 @@ main {
 /* *punti salienti del piano */
 .punti-salienti i {
   color: #0061ff;
+}
+/* *Tab orizzontale */
+main .contatta-ufficio-vendite {
+  margin: 60px 0;
+  height: 300px;
+  border: 1px solid grey;
 }
