--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,9 @@ img {
 .w-75 {
   width: 75%;
 }
+.w-100 {
+  width: 100%;
+}
 
 .clearfix {
   clear: both;
@@ -65,6 +68,10 @@ img {
   padding: 10px 30px;
 }
 
+.text-align-cntr {
+  text-align: center;
+}
+
 /* *Margin utilities */
 .m-tb-15 {
   margin: 15px 0;
@@ -99,7 +106,7 @@ img {
   margin-top: 100px;
 }
 
-.m-t-15 {
+.m-r-15 {
   margin-right: 15px;
 }
 
@@ -108,6 +115,35 @@ img {
 }
 
 /* *Padding utilities */
+.p-20 {
+  padding: 20px;
+}
+.p-tb-15 {
+  padding: 15px 0;
+}
+.p-tb-20 {
+  padding: 20px 0;
+}
+.p-tb-60 {
+  padding: 60px 0;
+}
+
+.p-rl-15 {
+  padding: 0 15px;
+}
+.p-rl-20 {
+  padding: 0 20px;
+}
+.p-rl-25 {
+  padding: 0 25px;
+}
+.p-rl-35 {
+  padding: 0 35px;
+}
+.p-rl-60 {
+  padding: 0 60px;
+}
+
 .p-t-25 {
   padding-top: 25px;
 }
@@ -121,7 +157,7 @@ img {
   padding-top: 100px;
 }
 
-.p-b-30 {
+.p- .p-b-30 {
   padding-bottom: 30px;
 }
 .p-b-50 {
@@ -130,6 +166,9 @@ img {
 
 .p-10-35 {
   padding: 10px 35px;
+}
+.p-30-20 {
+  padding: 30px 20px;
 }
 /* Header */
 /* *nav */
@@ -257,6 +296,5 @@ li {
 }
 /* *Tab orizzontale */
 main .contatta-ufficio-vendite {
-  height: 300px;
   border: 1px solid grey;
 }
