--- a/css/style.css
+++ b/css/style.css
@@ -201,8 +201,7 @@ main .contatta-ufficio-vendite {
   transition: 0.3s;
 }
 .row .client-logo:hover {
-  filter: opacity(0.9);
-  border: 15px solid rgba(60, 60, 60, 0.3);
+  box-shadow: inset 0 0 0 15px rgba(150, 150, 150, 0.4);
 }
 
 /* *Clients text */
