--- a/css/style.css
+++ b/css/style.css
@@ -271,8 +271,11 @@ footer li {
 footer li a {
   text-decoration: none;
   color: white;
+  transition: 0.3s;
 }
-
+footer li a:hover {
+  text-decoration: underline;
+}
 footer span {
   display: inline-block;
   padding: 50px 0;
