--- a/css/style.css
+++ b/css/style.css
@@ -14,34 +14,67 @@
 #logo {
   vertical-align: middle;
 }
-#nav ul {
-  display: inline-block;
+#nav-left,
+#nav-right {
+  padding: 0 25px;
 }
-#nav li {
-  display: inline-block;
+.nav-menu {
   list-style: none;
 }
-#nav li > a:not(.btn) {
+.nav-menu li {
   display: inline-block;
-  color: black;
-  text-decoration: none;
-  margin: 0 20px;
-  border-bottom: 2px solid white;
+  position: relative;
 }
-#nav li > a:not(.btn):hover {
-  border-bottom: 2px solid grey;
+.nav-menu .nav-link {
+  color: black;
+  display: block;
+  margin: 0 25px;
+  text-decoration: none;
+  border-bottom: 2px solid white;
+  transition: 0.5s;
+}
+.nav-link:hover {
+  border-bottom: 2px solid gray;
+}
+.with-sub-menu:hover .sub-menu {
+  visibility: visible;
+  opacity: 1;
 }
 
-#nav li a.btn {
-  display: inline;
+.sub-menu {
+  line-height: 1rem;
+  text-align: center;
+  position: absolute;
+  top: 62px;
+  left: 0;
+  border: 1px solid black;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s;
+  background-color: white;
+}
+.sub-menu li {
+  width: 200px;
+  font-size: 0.9rem;
+  background-color: white;
+  margin: 10px 0;
+}
+
+.sub-menu a {
+  display: block;
+  text-decoration: none;
+  color: black;
+  padding: 15px 20px;
+}
+
+.sub-menu li:hover {
+  background-color: rgba(128, 128, 128, 0.582);
+}
+
+.sub-menu li:hover a {
   color: white;
 }
 
-/* *Nav menu a tendina */
-#nav-right li ul {
-  list-style-type: none;
-  display: none;
-}
 /* *nav parte destra */
 #nav-right {
   text-align: right;
