--- a/css/style.css
+++ b/css/style.css
@@ -235,12 +235,17 @@ main .contatta-ufficio-vendite {
 }
 
 /* Clients block */
+/* *Three containers */
 .box-clienti {
   width: 100%;
-  height: 500px;
+  height: 30vw;
   background-color: #f5f5f5;
 }
 .box-clienti .clients-logos {
+  height: 100%;
+}
+.clients-text {
+  position: relative;
   height: 100%;
 }
 
@@ -283,10 +288,6 @@ main .contatta-ufficio-vendite {
 }
 
 /* *Clients text */
-.clients-text {
-  position: relative;
-  height: 100%;
-}
 .clients-text img {
   width: 150px;
   padding-bottom: 80px;
