--- a/css/style.css
+++ b/css/style.css
@@ -109,12 +109,16 @@
   z-index: 1;
 }
 
+#j-text-box a.btn {
+  width: 80%;
+  text-align: center;
+  display: block;
+}
 #j-text-box .arrow-down {
   position: relative;
   color: black;
   animation: bouncing 1s infinite;
 }
-
 @keyframes bouncing {
   0% {
     top: 0;
@@ -144,13 +148,34 @@
   display: inline-block;
 }
 #scelta-fatturazione {
+  position: relative;
   line-height: 20px;
 }
-#scelta-fatturazione .fatturazione {
-  display: inline-block;
+
+.radio {
+  cursor: pointer;
+  margin-right: 15px;
+  align-items: center;
 }
-.fake-radio.first {
-  border: 5px solid #0061ff;
+.input-radio {
+  display: none;
+}
+.radio-radio {
+  position: relative;
+  top: 0.2em;
+  display: inline-block;
+  width: 1.25em;
+  height: 1.25em;
+  border: 2px solid black;
+  border-radius: 50%;
+  margin-right: 5px;
+  padding: 2px;
+  /* *Transition */
+  box-shadow: inset 0 0 0 0 #0061ff;
+  transition: box-shadow 0.2s;
+}
+.input-radio:checked + .radio-radio {
+  box-shadow: inset 0 0 0 0.25em #0061ff;
 }
 
 /* *prices table */
