--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,4 +1,4 @@
-/* generics */
+/* ******************generics************************************* */
 * {
   padding: 0;
   margin: 0;
@@ -13,7 +13,19 @@ img {
   max-width: 100%;
 }
 
-/* utilities */
+/* ******************clearfix************************************* */
+.clearfix {
+  clear: both;
+  content: "";
+  display: table;
+}
+.f-left {
+  float: left;
+}
+.f-right {
+  float: right;
+}
+/* ******************utilities************************************ */
 .w-20 {
   width: 20%;
 }
@@ -46,18 +58,7 @@ img {
   height: 100%;
 }
 
-.clearfix {
-  clear: both;
-  content: "";
-  display: table;
-}
-.f-left {
-  float: left;
-}
-.f-right {
-  float: right;
-}
-
+/* *******************container************************************** */
 .container-60 {
   width: 60%;
   margin: 0 auto;
@@ -67,6 +68,7 @@ img {
   margin: 0 auto;
 }
 
+/* *******************position***************************************** */
 .relative {
   position: relative;
 }
@@ -80,6 +82,7 @@ img {
   transform: translate(-50%, -50%);
 }
 
+/* *******************button for link*************************************** */
 .fullwidth-btn {
   width: 100%;
   /* margin-left: 0;
@@ -112,6 +115,7 @@ img {
   box-shadow: inset 0 0 0 2px rgba(60, 60, 60, 0.4);
 }
 
+/* **********************text align******************************** */
 .text-align-cntr {
   text-align: center;
 }
@@ -126,7 +130,7 @@ img {
   font-size: 50px;
 }
 
-/* *Display */
+/* **********************Display**************************************** */
 .inline-block {
   display: inline-block;
 }
@@ -134,7 +138,8 @@ img {
   display: inline;
 }
 
-/* Margin utilities */
+/* *******************Margin utilities********************************** */
+/* margin tob bottom****************** */
 .m-tb-15 {
   margin: 15px 0;
 }
@@ -151,6 +156,7 @@ img {
   margin: 100px 0;
 }
 
+/* margin right left******************* */
 .m-rl-20 {
   margin: 0 20px;
 }
@@ -161,6 +167,7 @@ img {
   margin: 0 60px;
 }
 
+/* margin top************************ */
 .m-t-25 {
   margin-top: 25px;
 }
@@ -177,10 +184,12 @@ img {
   margin-top: 200px;
 }
 
+/* margin top************************* */
 .m-r-15 {
   margin-right: 15px;
 }
 
+/* margin bottom*********************** */
 .m-b-30 {
   margin-bottom: 30px;
 }
@@ -194,15 +203,17 @@ img {
   margin-bottom: 200px;
 }
 
-/* Padding utilities */
+/* *****************Padding utilities*********************************** */
 .p-50 {
   padding: 50px;
 }
 
+/* padding top bottom************** */
 .p-tb-30 {
   padding: 30px 0;
 }
 
+/* padding top********************* */
 .p-t-25 {
   padding-top: 25px;
 }
@@ -216,6 +227,7 @@ img {
   padding-top: 100px;
 }
 
+/* padding bottom********************* */
 .p-b-30 {
   padding-bottom: 30px;
 }
@@ -226,6 +238,7 @@ img {
   padding-bottom: 100px;
 }
 
+/* padding left************************* */
 .p-l-50 {
   padding-left: 50px;
 }
